@@ -38,6 +38,7 @@ GXD_HTSampleByNote.py|GXD HT Sample Notes Search|Search GXD_HTSample notes field
 GXD_ResultByNote.py|GXD Result Note Search|Searches InSitu Result Notes by note text (via contains search). \r\nSearch is restricted to Immunohistochemistry, In situ reporter (knock-in) and RNA in situ assays. \r\n \r\nCase insensitive.  "%" is wildcard for multiple characters. "?" is wildcard for a single character.  Spaces, alphanumerics, and most "punctuation" characters (except wildcards) are recognized literally as searchable characters.  \r\n \r\nWords are AND'ed together. Word order is enforced. Uses a Contains search on each word, so "respond to" also will return "correspond to". \r\n \r\nSome results are a little unpredictable because browsers will suppress extra spaces in the display that do exist in the data, for example, search for "section.  In" (no quotes, two spaces after the period) and compare to display.|lec|Connie Smith|2015-02-20|Result Note Text
 GXD_SpecimenByNote.py|GXD Specimen Note Search|Searches InSitu Specimen Notes by note text (via contains search). \r\nSearch is restricted to Immunohistochemistry, In situ reporter (knock-in) and RNA in situ assays. \r\n \r\nCase insensitive.  "%" is wildcard for multiple characters. "?" is wildcard for a single character.  Spaces, alphanumerics, and most "punctuation" characters (except wildcards) are recognized literally as searchable characters.  \r\n \r\nWords are AND'ed together. Word order is enforced. Uses a Contains search on each word, so "respond to" also will return "correspond to". \r\n \r\nSome results are a little unpredictable because browsers will suppress extra spaces in the display that do exist in the data, for example, search for "section.  In" (no quotes, two spaces after the period) and compare to display.|lec|Connie Smith|2023-05-09|Specimen Note Text
 GXD_AssayByNote.py|GXD Assay Note Search|Searches Assay Notes by note text (via contains search). \r\nSearch excludes In situ reporter (transgenic), Recombinase reporter\r\n \r\nCase insensitive.  "%" is wildcard for multiple characters. "?" is wildcard for a single character.  Spaces, alphanumerics, and most "punctuation" characters (except wildcards) are recognized literally as searchable characters.  \r\n \r\nWords are AND'ed together. Word order is enforced. Uses a Contains search on each word, so "respond to" also will return "correspond to". \r\n \r\nSome results are a little unpredictable because browsers will suppress extra spaces in the display that do exist in the data, for example, search for "section.  In" (no quotes, two spaces after the period) and compare to display.|lec|Connie Smith|2023-05-24|Assay Note Text
+GXD_PriorityTags.py|GXD Priority Tags|*prefix: ‘GXD’\r\r*include the phrase ‘To be used for full-coding priorities’ in the Abbreviation field.|lec|Jackie Finger|2024-03-27|
 BIB_ByExtractedText.py|Lit Triage : Search Extracted Text|Search Extracted Text : body + start methods + supplemental data + author manuscript fig legends.\r\nExclude references.\r\nNote:  extracted text is pre-supplementary data\r\n\r\n<A HREF="http://www.theasciicode.com.ar/extended-ascii-code/degree-symbol-ascii-code-248.html">http://www.theasciicode.com.ar/extended-ascii-code/degree-symbol-ascii-code-248.html</A>\r\n|lec|Jacqueline Finger|2017-08-03|*
 BIB_ExtractedTextByMGIIDs.py|Extracted Text in database - Search by ID|Search Extracted Text by MGI ID(s): body + start methods + supplemental data + author manuscript fig legends.\r\nExclude references.|lec|Jacqueline Finger|2023-01-18|MGI IDs (space-delimited)
 ALL_VariantPriority.py|Curation prioritization report|A list of alleles where:\r\nthe allele has phenotypes annotations (is a phenotypic allele), and...\r\nthe allele has variants, and..\r\nnone of the variants has curated genomic data (version may be 'Not Specified'\r\nColumns:\r\nAllele MGI ID\r\nAllele symbol|sc|Laurens Wilming|2019-08-20|
