@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-23-??
+DATE: 03/27/2024
+STAFF: lec
+wts2-1450/Custom Report for GXD workflow tag
+#       new file:   GXD_PriorityTags.py
+
 TAG: qcreports_db-6-0-23-14
 DATE: 03/25/2024
 STAFF: lec
